--- a/templates/mail_pictures/fhsms.html
+++ b/templates/mail_pictures/fhsms.html
@@ -17,7 +17,7 @@
         <a href="/fhsms/form_mail/"><button type="button" class="btn btn-primary">收件箱</button></a>
         <a href="/fhsms/to_mail/"><button type="button" class="btn btn-primary">发件箱</button></a>
         <button type="button" class="btn btn-primary btn-lg mail_btn" data-toggle="modal"
-                data-target="#myModal" id="many_del1">
+                data-target="#myModal" id="many_del1" style="display: none">
             <i class="ace-icon fa fa-envelope-o bigger-10" title="发送站内信"></i>
         </button>
     </div>
