--- a/templates/base.html
+++ b/templates/base.html
@@ -296,10 +296,10 @@
 <script>
 
     $('.mysecond').mouseenter(function () {
-        $(this).css('color', 'yellow')
+        $(this).css('color', '#122b40')
     });
     $('.mysecond').mouseleave(function () {
-        $(this).css('color', 'white')
+        $(this).css('color', 'black')
     });
 
 </script>
