--- a/templates/login.html
+++ b/templates/login.html
@@ -148,7 +148,7 @@
                                     </h4>
 
                                     <div class="space-6"></div>
-                                    <a href="/index/"><h5 style="text-align: center">
+                                    <a href="/index/spider_message/"><h5 style="text-align: center">
                                         您将在<span id="ls3s">3</span>s后跳转到首页
                                     </h5></a>
                                 </div><!-- /.widget-main -->
