--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
     <link href='/static/assets/css/abc.css' rel='stylesheet' type='text/css'/>
     <link href="/static/css/base.css" rel="stylesheet" type="text/css"/>
     <script src="/static/js/jquery-3.3.1.min.js"></script>
+    <script src="/static/js/echart/echarts.min.js"></script>
     {% block css %}{% endblock %}
     {% block js %}{% endblock %}
 
