--- a/templates/mail_pictures/Spider_message/spider_message.html
+++ b/templates/mail_pictures/Spider_message/spider_message.html
@@ -5,7 +5,10 @@
     <link href="/static/mail/spider_message/message_header.css" rel="stylesheet">
     <link href="/static/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     <div>
-        <h3>方案：<span>{{ rule_obj.title }}</span></h3>
+    {% if rule_obj %}
+
+        {% endif %}
+        <h1>方案：<span><a href="/spider/edit_rule/{{ rule_obj.pk }}/">{{ rule_obj.title }}</a></span></h1>
 
         <a href="#" style="margin-left: 900px">标准视图</a> | <a href="#">精简视图</a>
     </div>
