--- a/permission/templates/user_role.html
+++ b/permission/templates/user_role.html
@@ -2,7 +2,14 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <h1>用户角色管理</h1><br><br>
+            <h1>用户角色管理</h1><br><b 
+	<div>
+		<h3>current role : {% for foo in request.user.role_set.all %}
+			{{ foo.title }}
+		{% endfor %} </h3>
+</div><br><br>
+	
+  <br>
             <form action="/permission/user_role/" method="post" class="form-horizontal" enctype="multipart/form-data">
                 {% csrf_token %}
                 用户<select id="user" name="user" class="form-control" style="width: 50%">
