--- a/templates/mail_pictures/Spider_message/spider_message.html
+++ b/templates/mail_pictures/Spider_message/spider_message.html
@@ -245,7 +245,7 @@
                                        name='onclick_checkbox'
                                        value="{{ message.id }}">
                             </td>
-                            <td class="col-sm-8">
+                            <td class="col-sm-8" style="position:relative;">
                                 <div class="tr_content" style="font-size: 14px;">
                                     <a href="/index/{{ message.title }}/article/id={{ message.id }}/">
                                         <img src="/media/{{ message.source.source_img }}" class="img-circle"
